# neural-machine-translation

./: .gitignore  README.md  pyproject.toml
data/: README.md  sample_dates.csv
docs/: attention.md
examples/: README.md  translate_examples.py
models/: date_translator.pt
notebooks/: demo.ipynb
results/: metrics.json
scripts/: download_data.py  make_sample.py  train.py  translate.py
src/nmt/: __init__.py  checkpoint.py  data.py  metrics.py  model.py  train.py  viz.py
tests/: test_nmt.py
